# cudacpp-neural-network

./: CMakeLists.txt  README.md  main.cu
include/: conv2d.h  data_loader.h  dataset.h  flatten.h  kernel_ops.cuh  layer.cuh  linear.h  loss.cuh  maxpool.h  model.h  relu.h  softmax.cuh  tensor.cuh  utils.h
src/: conv2d.cu  data_loader.cu  dataset.cu  flatten.cu  kernel_ops.cu  layer.cu  linear.cu  loss.cu  maxpool.cu  model.cu  relu.cu  softmax.cu  utils.cu
